[tool.poetry]
name = "expensetracker"
version = "0.1.0"
description = ""
authors = ["Rojer Du <rojerdu.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
ruff = "^0.0.263"
pipreqs = "^0.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
